SERVER-51808 fix invariant readConcern level != Available

(cherry picked from commit 26b050bac9780ad4c87cf35f07cc97c3f48a41e0)